--- a/hm-auth-service/src/main/resources/application.properties
+++ b/hm-auth-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=hm-auth-service
-server.servlet.context-path=/hotel
+server.servlet.context-path=/hotel/auth
 server.port=8881
 
 eureka.client.fetch-registry=true
